--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -12,3 +12,5 @@
 //$link-color: #337ab7;
 //$footer-text-color: #000000;
 $indicatorContent-horizontalRule-color: transparent;
+$button-color: #ad3333;
+$button-color-pressed: #aa3333;
