--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -12,5 +12,5 @@
 //$link-color: #337ab7;
 //$footer-text-color: #000000;
 $indicatorContent-horizontalRule-color: transparent;
-$button-color: #ad3333;
-$button-color-pressed: #aa3333;
+$button-color: #003366;
+$button-color-pressed: #001366;
