--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -14,3 +14,5 @@
 $indicatorContent-horizontalRule-color: transparent;
 $button-color: #003366;
 $button-color-pressed: #001366;
+$focusBackgroundColor: #ad3333;
+$focusOutlineColor: #ad3333;
