--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -14,5 +14,10 @@
 $indicatorContent-horizontalRule-color: transparent;
 $button-color: #003366;
 $button-color-pressed: #001366;
+
 $focusBackgroundColor: #ad3333;
 $focusOutlineColor: #ad3333;
+
+$proxy-backgroundColor: #ad3333;
+$disclaimer-tag-backgroundColor: #ad3333;
+
