--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -12,6 +12,7 @@
 //$link-color: #337ab7;
 //$footer-text-color: #000000;
 $indicatorContent-horizontalRule-color: transparent;
+//color button azul institucional
 $button-color: #003366;
 $button-color-pressed: #001366;
 
