--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -22,3 +22,10 @@ $focusOutlineColor: #ad3333;
 $proxy-backgroundColor: #ad3333;
 $disclaimer-tag-backgroundColor: #ad3333;
 
+// Colores de los enlaces en el menú de navegación
+
+$menu-link-color: dadada; // Color del texto en los enlaces de la barra
+$menu-link-backgroundColor: ad3333; // Fondo de la barra de navegación
+$menu-link-borderBottomColor-hover: dadada; // Subrayado blanco cuando se pasa el ratón
+
+
