--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -17,7 +17,7 @@ $button-color: #003366;
 $button-color-pressed: #001366;
 
 $focusBackgroundColor: #ad3333;
-$focusOutlineColor: #ad3333;
+$focusOutlineColor: #dadada;
 
 $proxy-backgroundColor: #ad3333;
 $disclaimer-tag-backgroundColor: #ad3333;
