--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -16,7 +16,7 @@ $indicatorContent-horizontalRule-color: transparent;
 $button-color: #003366;
 $button-color-pressed: #001366;
 
-$focusBackgroundColor: #ad3333;
+$focusBackgroundColor: #003366;
 $focusOutlineColor: #dadada;
 
 $proxy-backgroundColor: #ad3333;
